--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,13 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+    "semi": true,
+
+    "singleQuote": false,
+
+    "tabWidth": 4,
+
+    "trailingComma": "es5",
+
+    "printWidth": 120,
+
+    "endOfLine": "lf"
 }
