--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - kafka-net
 
   kafka:
     image: confluentinc/cp-kafka:7.3.0
@@ -22,3 +24,29 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - kafka-net
+
+  prometheus:
+    image: prom/prometheus:latest
+    volumes: 
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - prometheus-net
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "5000:3000"
+    depends_on:
+      - prometheus
+    networks:
+      - prometheus-net
+
+networks:
+  kafka-net:
+    driver: bridge
+  prometheus-net:
+    driver: bridge
